<resources>
    <string name="app_name">Labourer</string>

    <!-- MENU ITEM STRING -->
    <string name="label_job">Pekerjaan</string>
    <string name="label_find_job">Cari Kerja</string>
    <string name="label_notification">Notif</string>
    <string name="label_profile">Akun</string>
    <string name="label_find_worker">Cari Pekerja</string>
    <string name="label_account_type_worker">Bekerja</string>
    <string name="label_account_type_employer">Cari Pekerja</string>

    <!-- LABEL STRING -->
    <string name="label_last_exp">Exp Terakhir didapatkan</string>
    <string name="label_last_achievement">Pencapaian Terakhir didapatkan</string>
    <string name="label_want_to_be">Saya Ingin</string>
    <string name="label_want_to_job">Bekerja</string>
    <string name="label_want_to_find_job">Mencari Pekerja</string>
    <string name="label_dont_have_account">Belum punya akun?</string>
    <string name="label_already_have_account">Sudah punya akun?</string>
    <string name="label_register_now">Daftar sekarang!</string>
    <string name="label_login_now">Login sekarang!</string>
    <string name="label_skill_paint">Mengecat</string>
    <string name="label_skill_decoration">Dekorasi</string>

    <!-- DESCRIPTION STRING -->
    <string name="desc_registration">Daftarkan diri anda dan menjadi bagian \ndari Labourer</string>
    <string name="desc_login">Masukkan username dan password \nuntuk masuk ke aplikasi</string>

    <!-- FIELD STRING -->
    <string name="field_email">E-Mail</string>
    <string name="field_password">Kata sandi</string>
    <string name="field_nik">NIK</string>
    <string name="field_full_name">Nama Lengkap</string>
    <string name="field_add_image">Tambahkan Gambar</string>
    <string name="field_title">Judul</string>
    <string name="field_description">Deskripsi</string>
    <string name="field_price">Bayaran</string>
    <string name="field_benefit">Keuntungan</string>
    <string name="field_count_of_worker">Jumlah Pekerja</string>
    <string name="field_duration_of_work">Lama Pekerjaan</string>
    <string name="field_address">Alamat</string>

    <!-- STATUS STRING -->
    <string name="status_in_proccess">Dalam Pengerjaan</string>
    <string name="status_be_accepted">Diterima</string>
    <string name="status_done">Selesai</string>
    <string name="status_canceled">Dibatalkan</string>

    <!-- DUMMY STRING -->
    <string name="title_dummy">Lorem Ipsum 1234</string>
    <string name="location_dummy">Indonesia</string>
    <string name="price_dummy">Rp.30.000 - Rp.200.000</string>
    <string name="profile_description_dummy">Saya adalah tukang yang cukup berpengalaman dalam mengerjakan pekerjaan seperti mengecat dan renovasi sederhana untuk rumah anda....</string>
    <string name="email_dummy">johndoe@contoh.com</string>
    <string name="password_dummy">johndoe123</string>
    <string name="full_name_dummy">John Doe</string>
    <string name="nik_dummy">7392749129xxxxxx</string>
    <string name="min_price_dummy">Minimum</string>
    <string name="max_price_dummy">Maximum</string>
    <string name="benefit_dummy">Contoh : Dapat Makan</string>
    <string name="duration_of_work_dummy">12 Hari</string>
    <string name="count_of_work_dummy">1 Orang</string>

    <!-- BUTTON STRING -->
    <string name="yes_button">Ya</string>
    <string name="no_button">Tidak</string>
    <string name="job_application_button">Lamar Pekerjaan</string>
    <string name="save_button">Simpan</string>
    <string name="change_face_button">Ganti Foto</string>
    <string name="login_button">Masuk</string>
    <string name="registration_button">Daftar</string>
    <string name="recruit_button">Rekrut</string>

    <!-- APPBAR STRING -->
    <string name="job_detail_app">Detail Pekerjaan</string>
    <string name="edit_profile_app">Pengaturan Profil</string>
    <string name="level_app">Level</string>
    <string name="achievement_app">Pencapaian</string>
    <string name="skills_app">Keahlian</string>
    <string name="review_app">Ulasan</string>
    <string name="create_job_app">Buat Pekerjaan</string>

    <!-- FRAGMENT LABEL -->
    <string name="job_detail_fragment">detail_pekerjaan</string>
    <string name="job_employer_detail_fragment">detail_pekerjaan</string>
    <string name="edit_profile_fragment">pengaturan_profile</string>
    <string name="level_fragment">level</string>
    <string name="achievement_fragment">achievement</string>
    <string name="skills_fragment">keahlian</string>
    <string name="review_fragment">ulasan</string>
    <string name="create_job_fragment">buat_pekerjaan</string>
    
    <!-- SHAREPREF STRING -->
    <string name="uid">user_id</string>
</resources>
