<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/label_title"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/logo"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textAlignment="center"
        android:text="@string/desc_login"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_email"
        android:layout_below="@id/label_description"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <EditText
        android:id="@+id/page_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_dummy"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/label_email"
        android:textColorHint="@color/colorWhite"
        app:backgroundTint="@color/colorWhite"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <TextView
        android:id="@+id/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_password"
        android:layout_below="@id/page_login_email"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <EditText
        android:id="@+id/page_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_dummy"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/label_password"
        app:backgroundTint="@color/colorWhite"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/label_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_login_password"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/colorWhite"
        android:text="@string/label_dont_have_account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_login_password"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/colorAccent"
        android:layout_toEndOf="@id/label_dont_have_account"
        android:text="@string/label_register_now"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_below="@id/label_dont_have_account"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorWhite"
        android:text="@string/login_button"/>

</RelativeLayout>