<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:textSize="32sp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/label_title"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/logo"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textAlignment="center"
                android:text="@string/desc_registration"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:id="@+id/label_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_description"
                android:layout_marginStart="32dp"
                android:textColor="@color/colorWhite"
                android:text="@string/label_already_have_account"/>

            <TextView
                android:id="@+id/page_registration_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_description"
                android:layout_toRightOf="@id/label_already_have_account"
                android:layout_marginStart="4dp"
                android:textColor="@color/colorAccent"
                android:text="@string/label_login_now"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/label_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_full_name"
                android:layout_below="@id/label_already_have_account"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/page_registration_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_dummy"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/label_full_name"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <TextView
                android:id="@+id/label_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_nik"
                android:layout_below="@id/page_registration_full_name"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <EditText
                android:id="@+id/page_registration_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik_dummy"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorWhite"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/label_nik"
                android:textColorHint="@color/colorWhite"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_email"
                android:layout_below="@id/page_registration_nik"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <EditText
                android:id="@+id/page_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_dummy"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/label_email"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <TextView
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_password"
                android:layout_below="@id/page_registration_email"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

            <EditText
                android:id="@+id/page_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_dummy"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/label_password"
                android:textColorHint="@color/colorWhite"
                app:backgroundTint="@color/colorWhite"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp" />

            <Button
                android:id="@+id/page_registration_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_below="@id/page_registration_password"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorWhite"
                android:text="@string/registration_button"
                android:layout_marginBottom="32dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>