<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/page_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/title_dummy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/user_100"/>

    <ImageView
        android:id="@+id/page_setting_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignEnd="@id/page_photo"
        android:layout_alignTop="@id/page_photo"
        android:src="@drawable/ic_gear_25"
        android:contentDescription="@string/title_dummy" />

    <TextView
        android:id="@+id/page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/title_dummy"
        android:layout_below="@id/page_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/page_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@id/page_name"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/location_dummy"/>

    <TextView
        android:id="@+id/label_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/page_status"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/field_address"/>

    <TextView
        android:id="@+id/page_profile_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/label_address"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/profile_description_dummy"/>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/page_profile_address"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/field_description"/>

    <TextView
        android:id="@+id/page_profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/label_description"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/profile_description_dummy"/>

</RelativeLayout>