<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/title_dummy"
        android:src="@drawable/user_50"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dummy"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:text="@string/price_dummy"/>

        <TextView
            android:id="@+id/item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_skills"
            android:layout_marginStart="4dp"
            android:text="@string/recruit_button"
            android:background="@color/colorPrimary"
            android:textSize="12sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_marker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_star_full"
            android:layout_marginTop="2dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/item_review_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_dummy"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/item_marker"/>

    </RelativeLayout>

</LinearLayout>