<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dummy"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/item_marker"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_marker_15"
            android:layout_below="@id/item_title"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_toEndOf="@id/item_marker"
            android:layout_marginStart="4dp"
            android:text="@string/location_dummy"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/item_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status_in_proccess"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/colorGreen"
        android:layout_gravity="center_vertical"/>

</LinearLayout>